rearrage on mobile, bug with welcome

--- a/src/App.css
+++ b/src/App.css
@@ -18,6 +18,10 @@
 }
 
 @media only screen and (max-width: 736px) {
+  .app {
+    overflow: auto;
+  }
+  
   .content-wrapper {
     flex-direction: column;
   }
