--- a/src/AppHeader/AppHeader.css
+++ b/src/AppHeader/AppHeader.css
@@ -13,13 +13,8 @@
   font-size: 2em;
 }
 
-@media only screen and (max-width: 52em) {
+@media only screen and (max-width: 736px) {
   .logo {
-    margin-left: -10%;
-  }
-}
-@media only screen and (max-width: 320px) {
-  .logo {
-    margin-left: -13%;
+    font-size: smaller;
   }
 }
