--- a/src/Article/Article.css
+++ b/src/Article/Article.css
@@ -1,5 +1,5 @@
 .article-wrapper {
-  margin: 20px 20px 20px 0px;
+  margin: 20px 20px 20px 20px;
   font-size: 14px;
   line-height: 24px;
 }
