--- a/src/RightSideBar/RightSideBar.css
+++ b/src/RightSideBar/RightSideBar.css
@@ -16,9 +16,11 @@
 
 @media only screen and (max-width: 736px) {
   .right-side-bar {
-    padding-left: 0px;
-    order: 1;
+    padding-left: 20px;
+    padding-right: 20px;
     padding-bottom: 20px;
+    order: 1;
+    flex-grow: initial;
   }
 
   .intro-message {
